N+1 queries in listAccommodations